# coloco

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tsconfig.json
+app/: App.svelte  app.svelte  index.html  index.svelte  router.ts
+app/fakit/: router.ts
+app/fakit/codegen/: config.ts  plugin.ts  types.d.ts
+node/: openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
besto/: api.py  index.svelte  longus.svelte  zesto.svelte
fakit/: __init__.py  __main__.py  api.py  app.py  codegen.py
fakit/cli/: api.py  dev.py  node.py
fakit/codegen/: openapi-ts.config.ts
fakit/templates/docker/: Dockerfile-tpl  docker-compose.yml-tpl
fakit/templates/standard/: main.py-tpl  requirements.txt-tpl
fakit/templates/standard/+app/: app.svelte-tpl
fakit/templates/standard/+node/: openapi-ts.config.ts-tpl
fakit/templates/standard/example/: api.py-tpl  index.svelte-tpl
node/fakit/codegen/: plugin.ts
node/jooze/codegen/: config.ts  plugin.ts  types.d.ts
src/coloco/: __init__.py  __main__.py  api.py  app.py  codegen.py  config.py  db.py  dependencies.py  exceptions.py  inference.py  lifespan.py
src/coloco/cli/: api.py  build.py  createapp.py  db.py  dev.py  node.py  serve.py
src/coloco/cli/shared/: logging.py  muiltiprocess.py
src/coloco/templates/standard/: .gitignore-tpl  README.md-tpl  package.json-tpl  pyproject.toml-tpl  tsconfig.json-tpl  (+2 more)
test/: chongus.svelte
(+6 files in other folders)
