[project]
name = "coloco"
version = "0.5.0"
description = "A kit for creating FastAPI + Svelte applications"
authors = [{ name = "Channel Cat", email = "channelcat@gmail.com" }]
dependencies = [
    "asyncpg>=0.31.0",
    "cyclopts>=3.18.0",
    "fastapi>=0.115.0",
    "PyJWT>=2.10.1",
    "rich>=14.0.0",
    "textual>=8.2.7",
    "tortoise-orm[asyncpg]>=1.1.7",
    "type-less>=0.1.28",
    "uvicorn>=0.31.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
coloco = "coloco.__main__:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["coloco"]
known-third-party = [
    "fastapi",
    "rich",
    "tortoise-orm",
    "tortoise-pathway",
    "type-less",
    "uvicorn",
]
from-first = true
combine-as-imports = true
split-on-trailing-comma = true

[tool.pdm]
distribution = true

[dependency-groups]
dev = ["ruff>=0.15.14"]
